tests/error/ptr_assign.gw
typedef void (test0)();
typedef void (test1)();
test0 @=> test1;
